brat/test/golden/error/noovers.brat.golden
Error in test/golden/error/noovers.brat@FC {start = Pos {line = 2, col = 3}, end = Pos {line = 2, col = 7}}:
f(a, b) = []
  ^^^^

  Nothing to bind to: b

